--- a/docs/email-templates/MeetingStarted.mjml
+++ b/docs/email-templates/MeetingStarted.mjml
@@ -13,20 +13,20 @@
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text font-size="16px" align="center" padding='2px'>Vous avez reçu une notification :</mj-text>
+          <mj-text font-size="16px" align="center" padding='2px'>{{notificationReceived}}</mj-text>
           <mj-text font-size="16px" align="center">{{content}}</mj-text>
           <mj-button
-          href="${action_url}"
+          href={{actionUrl}}
           background-color="#3182CE"
           font-size="16px"
-          >Ouvrir la réunion</mj-button>
+          >{{actionButton}}</mj-button>
         </mj-column>
       </mj-section>
     </mj-wrapper>
     <mj-section>
       <mj-column>
-        <mj-text font-size="12px" font-style="italic" padding='2px'>Ceci est un email automatique, merci de ne pas y répondre.</mj-text>
-        <mj-text font-size="12px" font-style="italic" padding='2px'>Vous pouvez régler vos paramètres de notification sur Rolebase ou vous désabonner en <a href="${unsubscribe_url}">cliquant ici</a>.</mj-text>
+        <mj-text font-size="12px" font-style="italic" padding='2px'>{{automaticEmail}}</mj-text>
+        <mj-text font-size="12px" font-style="italic" padding='2px'>{{unsubscribe}} <a href={{appUrl}}>Rolebase</a>.</mj-text>
       </mj-section>
   </mj-body>
 </mjml>
