--- a/src/components/molecules/editor/lib/RichEditor.css
+++ b/src/components/molecules/editor/lib/RichEditor.css
@@ -585,6 +585,15 @@ hr.selected {
   animation: CursorBlink 1.1s steps(2, start) infinite;
 }
 
+/* Hack to modify collab cursors */
+body > div > span > span + span[style] {
+  width: 1.5px !important;
+}
+body > div > span > span + span[style] > span[style] {
+  top: -9px !important;
+  left: 0 !important;
+}
+
 @keyframes CursorBlink {
   to {
     visibility: hidden;
