Fixed inconsistent style betweend dark and light mode for subscription summary

--- a/src/theme.css
+++ b/src/theme.css
@@ -6,3 +6,7 @@ html {
 body {
   overscroll-behavior: none; /* Prevent overscroll */
 }
+
+.cui-steps__step-icon-container:not([aria-current=step]) {
+  border: 1px solid var(--chakra-colors-gray-200) !important;
+}
