--- a/docs/notifications/email-templates/Simple.mjml
+++ b/docs/notifications/email-templates/Simple.mjml
@@ -8,13 +8,13 @@
     <mj-wrapper border="1px solid #B2B3C7" padding="0px">
       <mj-section background-color="#9A65F6">
         <mj-column> 
-          <mj-text font-size="18px" font-weight="700" color="white" align="center" padding="10px">{{title}}</mj-text>
+          <mj-text font-size="18px" font-weight="700" color="white" align="center" padding="10px">{{{title}}}</mj-text>
         </mj-column>
       </mj-section>
       <mj-section>
         <mj-column>
           <mj-text font-size="16px" align="center" padding='2px'>{{notificationReceived}}</mj-text>
-          <mj-text font-size="16px" align="center">{{content}}</mj-text>
+          <mj-text font-size="16px" align="center">{{{content}}}</mj-text>
           <mj-button
           href={{actionUrl}}
           background-color="#3182CE"
